Changelog
=========

1.5.3 (unreleased)
------------------

- Nothing changed yet.


1.5.2 (2012-06-29)
------------------

- Fixed upload when filename has special characters under IE.
  [thomasdesvenain]


1.5.1 (2012-05-24)
------------------

- Fixed Spanish language code.
  [thomasdesvenain]

1.5 (2012-05-24)
----------------

- Use IUUID adapter instead of UID method in order to make it work also
  with Dexterity items.
  [avoinea]

- We can update existing files through quickupload.
  If user try to upload a file that already exists,
  if he is allowed to modify this existing object,
  the file, title and description fields are replaced with new values.
  [thomasdesvenain]

- German translations completed.
  [mathias.leimgruber]

- Raises MissingExtension exception when filename does not have the extension.
  [taito]

1.4 (2012-03-14)
----------------

- Fix CSS images for sites using virtual host _vh_ components.
  [dokai]

- Hide buttons after clearing the queue.
  [giacomos]

- Trigger custom JS events after each file upload and also when all files
  were uploaded
  [avoinea]

- Updated responseJSON with more info about the uploaded file
  (uid, title and name)
  [avoinea]

- More robust check for existing file with same id.
  Avoid some unsuitable error messages.
  [thomasdesvenain]

- Move interfaces to collective.quickupload.interfaces module.
  [thomasdesvenain]

- Finnish translation
  [saffe]

1.3.1 (2011-12-22)
------------------

- Display quickupload portlet on display views only
  (disable it on edit forms, etc).
  [thomasdesvenain]

- Add error logs when failures happen.
  [thomasdesvenain]

- Works with dexterity AND without blobs.
  [thomasdesvenain]


1.3.0 (2011-11-29)
------------------

- Added Italian translation
  [giacomos]

- Make sure that the portlet is rendered if upload_portal_type is set to auto.
  [swampmonkey]

- Prevent diazo themes from theming the json response.
  [swampmonkey]
