@@ -4,7 +4,9 @@ Changelog
 1.5.3 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Works without plone.uuid
+  (for example with a Plone 4.0.x basic install).
+  [frisi, do3cc, thomasdesvenain]
 
 
 1.5.2 (2012-06-29)
